@@ -41,6 +41,7 @@ public class ProtoMethod extends ProtoObject {
 	}
 
 	public ProtoObject applyTo(ProtoObject receiver, ProtoObject cls, ProtoObject arg1, ProtoObject arg2, ProtoObject arg3, ProtoObject arg4, ProtoObject arg5) {
-		throw subclassShouldHaveImplemented(1);
+		System.out.println("applyTo(5) " + receiver + " " + arg1);
+		throw subclassShouldHaveImplemented(5);
 	}
 }
